bug word too long and form to add task in diagram view

--- a/views/diagram-view/diagram-view.css
+++ b/views/diagram-view/diagram-view.css
@@ -113,3 +113,10 @@
   float: right;
   margin-right: -7px;
 }
+
+.planning-label {
+  word-break: break-all;
+  word-wrap: break-word;
+  overflow: hidden;
+  line-height: 27px;
+}
